--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "orb",
   "version": "0.22.4",
-  "description": "General purpose moderation, leveling and music bot.",
+  "description": "General purpose moderation, leveling and fun bot.",
   "main": "orb.ts",
   "author": "none",
   "type": "module",
